# quest-hook-rs

./: .gitmodules  Cargo.toml
inline_hook/: Cargo.toml  build.rs
inline_hook/src/: detour.rs  lib.rs
libil2cpp/: .gitignore  Cargo.toml  build.rs  generate_bindings.ps1  generate_bindings_android.ps1  qpm.json  qpm.shared.json  wrapper.h
libil2cpp/src/: array.rs  byref.rs  class.rs  exception.rs  gc.rs  lib.rs  method_info.rs  object.rs  parameter_info_stub.rs  string.rs  ty.rs  valuetype.rs
libil2cpp/src/raw/: functions.rs  mod.rs  types_2022.rs
libil2cpp/src/raw/types_v31/: android.rs  linux.rs  mod.rs  windows.rs
libil2cpp/src/typecheck/: callee.rs  caller.rs  mod.rs  ty.rs
proc_macros/: Cargo.toml
proc_macros/src/: hook.rs  impl_arguments_parameters.rs  impl_type.rs  lib.rs
src/: util.rs
