[package]
name = "libil2cpp"
version = "0.1.0"
authors = [
    "StackDoubleFlow <ojaslandge@gmail.com>",
    "Raphaël Thériault <self@raftar.io>",
]
repository = "https://github.com/StackDoubleFlow/quest-hook-rs.git"
license = "MIT"
edition = "2021"

[dependencies]
quest_hook_proc_macros = { path = "../proc_macros" }
libloading = "0.8"
thiserror = "2"
paste = "1"
serde = { version = "1", optional = true }

[dependencies.tracing]
version = "0.1"
features = ["std", "attributes"]
default-features = false
optional = true

[features]
default = []
unity2022 = []
unity2021 = []
unity2019 = []
unity2018 = []
cache = []
trace = ["tracing"]
